--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
                 android:text="블루투스 활성" />
 
             <Button
-                android:id="@+id/btn_bluetooth"
+                android:id="@+id/btn_find_bluetooth"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
